Instalacion de dependencias

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "ctd-esp-fe3-final": "file:",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1",
+    "testing-library": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
